feat: filter out trimmed data on compaction (#379)
Signed-off-by: Shichao Nie <niesc@automq.com>